vagrant/yamlconfig/02/02_sampleciliumgateway.yaml
# Install Metal LB first and vertify that the IP addresses from the pool are assigned to the correct NIC.
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: test-gw
  namespace: samplegw
spec:
  gatewayClassName: cilium
  listeners:
  - protocol: HTTP
    port: 80
    name: test-gw
    allowedRoutes:
      namespaces:
        from: All #use Same to only allow route from the same namespace
