vagrant/yamlconfig/02/03_sampleenvoygateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: test-gw-envoy
  namespace: samplegw
spec:
  gatewayClassName: envoy
  listeners:
  - protocol: HTTP
    port: 80
    name: test-gw-envoy
    allowedRoutes:
      namespaces:
        from: All
