vagrant/yamlconfig/02/04_sampletraefikgateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: traefik-custom
spec:
  controllerName: traefik.io/gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: test-gw-traefik-custom
  namespace: samplegw
spec:
  gatewayClassName: traefik-custom
  listeners:
  - protocol: HTTP
    port: 80
    name: test-gw-traefik-custom
    allowedRoutes:
      namespaces:
        from: All   
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: test-gw-traefik
  namespace: samplegw
spec:
  gatewayClassName: traefik
  listeners:
  - protocol: HTTP
    port: 80
    name: test-gw-traefik
    allowedRoutes:
      namespaces:
        from: All
